--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,5 @@
 <h1><%= @student.to_s %></h1>
+
+<p><%= @student.active ? "This student is currently active.": "This student is currently inactive." %></p>
+
+<%= link_to 'Activate', activate_student_path(@student) %>
