--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,6 @@
 <h1><%= @student.to_s %></h1>
+This student is currently <% if @student.active %>active.
+<% else %>inactive.
+<% end %>
+
+<%= link_to 'activate', activate_student_path(@student) %>
