--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,8 +1,8 @@
-<h1><%= @student.to_s %></h1>
+<h1 style="color:blue;"><%= @student.to_s %></h1>
 
-<% if @student.active %>
-    This student is currently active.
+<h1><% if @student.active %></h1>
+    <h1 style="color:green;">This student is currently active.</h1>
 <% else %>
-    This student is currently inactive.
+    <h1 style="color:red;">This student is currently inactive.</h1>
 
 <% end %> 
